--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 management.endpoints.web.base-path=/
+spring.cloud.stream.bindings.input.consumer.concurrency=3
+spring.cloud.stream.kafka.binder.autoAddPartitions=true
